feat: Added sass compiler and watcher

--- a/StudiGO.Web/StudiGO.Web.csproj
+++ b/StudiGO.Web/StudiGO.Web.csproj
@@ -55,4 +55,8 @@
       <_ContentIncludedByDefault Remove="wwwroot\lib\bootstrap\LICENSE" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="AspNetCore.SassCompiler" Version="1.74.1" />
+    </ItemGroup>
+
 </Project>
