feat: Split up layout css

--- a/StudiGO.Web/StudiGO.Web.csproj
+++ b/StudiGO.Web/StudiGO.Web.csproj
@@ -59,4 +59,8 @@
       <PackageReference Include="AspNetCore.SassCompiler" Version="1.74.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="wwwroot\css\" />
+    </ItemGroup>
+
 </Project>
