--- a/StudiGO.Web/StudiGO.Web.csproj
+++ b/StudiGO.Web/StudiGO.Web.csproj
@@ -57,6 +57,7 @@
 
     <ItemGroup>
       <PackageReference Include="AspNetCore.SassCompiler" Version="1.74.1" />
+      <PackageReference Include="Auth0.AspNetCore.Authentication" Version="1.4.1" />
     </ItemGroup>
 
     <ItemGroup>
