--- a/StudiGO.Web/appsettings.json
+++ b/StudiGO.Web/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Auth0": {
+    "Domain": "studigo.eu.auth0.com",
+    "ClientId": "wjiIvJtpDnjURu1OzXHNpfUqS0VIzwWy"
+  }
 }
