--- a/StudiGO.Web/StudiGO.Web.csproj
+++ b/StudiGO.Web/StudiGO.Web.csproj
@@ -53,6 +53,12 @@
       <_ContentIncludedByDefault Remove="wwwroot\lib\bootstrap\dist\js\bootstrap.min.js" />
       <_ContentIncludedByDefault Remove="wwwroot\lib\bootstrap\dist\js\bootstrap.min.js.map" />
       <_ContentIncludedByDefault Remove="wwwroot\lib\bootstrap\LICENSE" />
+      <_ContentIncludedByDefault Remove="Pages\Partials\_StationsPartial.cshtml" />
+      <_ContentIncludedByDefault Remove="Pages\Partials\_TripDetailsPartial.cshtml" />
+      <_ContentIncludedByDefault Remove="Pages\Partials\_TripsPartial.cshtml" />
+      <_ContentIncludedByDefault Remove="Partials\_StationsPartial.cshtml" />
+      <_ContentIncludedByDefault Remove="Partials\_TripDetailsPartial.cshtml" />
+      <_ContentIncludedByDefault Remove="Partials\_TripsPartial.cshtml" />
     </ItemGroup>
 
     <ItemGroup>
