--- a/StudiGO.Web/StudiGO.Web.csproj
+++ b/StudiGO.Web/StudiGO.Web.csproj
@@ -4,8 +4,18 @@
         <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
-        <RootNamespace>StudiGO</RootNamespace>
     </PropertyGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\StudiGO.Core\StudiGO.Core.csproj" />
+      <ProjectReference Include="..\StudiGO.DAL\StudiGO.DAL.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="AspNetCore.SassCompiler" Version="1.77.0" />
+      <PackageReference Include="Auth0.AspNetCore.Authentication" Version="1.4.1" />
+      <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.2" />
+    </ItemGroup>
 
     <ItemGroup>
       <_ContentIncludedByDefault Remove="wwwroot\lib\bootstrap\dist\css\bootstrap-grid.css" />
@@ -53,26 +63,10 @@
       <_ContentIncludedByDefault Remove="wwwroot\lib\bootstrap\dist\js\bootstrap.min.js" />
       <_ContentIncludedByDefault Remove="wwwroot\lib\bootstrap\dist\js\bootstrap.min.js.map" />
       <_ContentIncludedByDefault Remove="wwwroot\lib\bootstrap\LICENSE" />
-      <_ContentIncludedByDefault Remove="Pages\Partials\_StationsPartial.cshtml" />
-      <_ContentIncludedByDefault Remove="Pages\Partials\_TripDetailsPartial.cshtml" />
-      <_ContentIncludedByDefault Remove="Pages\Partials\_TripsPartial.cshtml" />
-      <_ContentIncludedByDefault Remove="Partials\_StationsPartial.cshtml" />
-      <_ContentIncludedByDefault Remove="Partials\_TripDetailsPartial.cshtml" />
-      <_ContentIncludedByDefault Remove="Partials\_TripsPartial.cshtml" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <PackageReference Include="AspNetCore.SassCompiler" Version="1.74.1" />
-      <PackageReference Include="Auth0.AspNetCore.Authentication" Version="1.4.1" />
     </ItemGroup>
 
     <ItemGroup>
       <Folder Include="wwwroot\css\" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <ProjectReference Include="..\StudiGO.Core\StudiGO.Core.csproj" />
-      <ProjectReference Include="..\StudiGO.DAL\StudiGO.DAL.csproj" />
     </ItemGroup>
 
 </Project>
