--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -3,14 +3,38 @@
 
 name: CI and CD
 
-on:
-  push:
-    branches:
-      - main
+on: push
 
-jobs:        
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: 8.0.x
+      - name: Restore dependencies
+        run: dotnet restore
+      - name: Build
+        run: dotnet build --no-restore
+  
+  unit-test:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v3
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: 8.0.x
+      - name: Test
+        run: cd StudiGO.Test && dotnet test --verbosity normal
+
   deploy:
     runs-on: ubuntu-latest
+    needs: unit-test
+    if: github.ref == 'refs/heads/main' && ${{ success() }}
     steps:
       - uses: actions/checkout@v3
       - name: Build docker image
