--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,12 +29,12 @@ jobs:
         with:
           dotnet-version: 8.0.x
       - name: Test
-        run: cd StudiGO.Test && dotnet test --verbosity normal
+        run: cd StudiGO.Test && dotnet test --verbosity minimal
 
   deploy:
     runs-on: ubuntu-latest
     needs: unit-test
-    if: github.ref == 'refs/heads/main' && ${{ success() }}
+    if: github.ref == 'refs/heads/main'
     steps:
       - uses: actions/checkout@v3
       - name: Build docker image
