feat: Added sql conn string and package

--- a/StudiGO.Web/appsettings.json
+++ b/StudiGO.Web/appsettings.json
@@ -9,5 +9,8 @@
   "Auth0": {
     "Domain": "studigo.eu.auth0.com",
     "ClientId": "2tpNOpHELfixfYhqbcrNwj1NB8atGuse"
+  },
+  "ConnectionStrings": {
+    "MySqlConnection": "Server=localhost;Port=3306;Database=studigo;User=root;Password=;"
   }
 }
