--- a/StudiGO.Web/appsettings.json
+++ b/StudiGO.Web/appsettings.json
@@ -5,9 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "Auth0": {
-    "Domain": "studigo.eu.auth0.com",
-    "ClientId": "2tpNOpHELfixfYhqbcrNwj1NB8atGuse"
-  }
+  "AllowedHosts": "*"
 }
